--- a/package.json
+++ b/package.json
@@ -12,11 +12,21 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "nuxt": "^2.0.0"
+    "nuxt": "^2.0.0",
+    "@nuxt/types": "^0.6.1",
+    "@nuxt/typescript-runtime": "latest",
+    "downloadjs": "^1.4.7",
+    "html-to-image": "^0.1.1",
+    "nuxt-property-decorator": "^2.5.0",
+    "vue-class-component": "^7.0.2",
+    "vue-i18n": "^8.15.3",
+    "vue-property-decorator": "^8.3.0"
   },
   "devDependencies": {
+    "@nuxt/typescript-build": "latest",
     "@nuxtjs/tailwindcss": "^1.0.0",
     "@nuxtjs/eslint-config": "^1.0.1",
+    "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
