--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     },
     "types": [
       "@types/node",
-      "@nuxt/types"
+      "@nuxt/types",
+      "nuxt-i18n"
     ]
   },
   "exclude": [
