--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
     "@nuxt/types": "^0.6.1",
     "@nuxt/typescript-runtime": "latest",
+    "@nuxtjs/device": "^1.2.7",
     "downloadjs": "^1.4.7",
     "html-to-image": "^0.1.1",
+    "nuxt": "^2.0.0",
     "nuxt-property-decorator": "^2.5.0",
     "vue-class-component": "^7.0.2",
     "vue-i18n": "^8.15.3",
