--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nuxt-property-decorator": "^2.5.0",
     "vue-class-component": "^7.0.2",
     "vue-i18n": "^8.15.3",
+    "vue-lazyload": "^1.3.3",
     "vue-property-decorator": "^8.3.0"
   },
   "devDependencies": {
